endpoint-client/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-automl-flowers-ec
spec:
  selector:
    matchLabels:
      app: edge-automl-flowers-ec
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: edge-automl-flowers-ec
    spec:
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: regcred
      containers:
        - name: edge-automl-flowers-ec
          imagePullPolicy: Always
          image: ghcr.io/kenmoini/gcp-automl-in-a-container:endpoint-client-latest
          ports:
            - containerPort: 8080
              name: web
          volumeMounts:
          - name: gcp-credentials
            mountPath: "/tmp/gcp-credentials/"
            readOnly: true
      volumes:
      - name: gcp-credentials
        secret:
          secretName: gcp-credentials
          optional: false
          items:
          - key: sa
            path: gcp-service-account-file.json
