endpoint-client/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-automl-flowers-ec
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: edge-automl-flowers-ec
